[project]
name = "wechat-harness"
version = "1.0.0"
description = "微信公众号 AI 技术内容生产 Harness 流水线"
requires-python = ">=3.13"
readme = "README.md"
authors = [
    { name = "Harness Team" },
]

[project.scripts]
pipeline = "src.core.pipeline:main"
verify-report = "src.validators.verify:main"
verify-deepread = "src.validators.verify_deepread:main"
verify-article = "src.validators.verify_article:main"
verify-consistency = "src.validators.verify_consistency:main"
agent = "src.core.agent:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
